# sleip

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: SleipAddTest.cmake  sleip-config.cmake.in
doc/: dynamic_array.adoc
include/sleip/: dynamic_array.hpp  dynamic_array_fwd.hpp
test/: CMakeLists.txt  assignment.cpp  capacity.cpp  comparison.cpp  constructors.cpp  container_traits.cpp  copy_assignment.cpp  element_access.cpp  fancy_pointer.cpp  initializer_list_assignment.cpp  move_assignment.cpp  move_if_noexcept_adaptor.cpp  noinit.cpp  operations.cpp  reverse_iterators.cpp
test/array/: CMakeLists.txt  array_comparison.cpp  array_constructors.cpp  array_copy_assignment.cpp  array_element_access.cpp  array_initializer_list_assignment.cpp  array_move_assignment.cpp  array_noinit.cpp  array_operations.cpp
