sleip_add_test(container_traits)
sleip_add_test(move_if_noexcept_adaptor)
sleip_add_test(constructors)
sleip_add_test(copy_assignment)
sleip_add_test(move_assignment)
sleip_add_test(initializer_list_assignment)
sleip_add_test(element_access)
sleip_add_test(reverse_iterators)
sleip_add_test(capacity)
sleip_add_test(operations)
sleip_add_test(fancy_pointer)
sleip_add_test(noinit)
sleip_add_test(comparison)

add_subdirectory(array)
